# all-good-ops

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
chronicle/: portfolio.md
data/: agent-ranks.json  contacts.json  improvement-log.jsonl  quality-scores.json  usage-log.jsonl
knowledge/: INDEX.md
money-bot/: .env.example  .gitignore  PHASE_1_CHECKLIST.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
outputs/bsa/proposal-automation/src/collector/: db.py  main.py  pyproject.toml  scorer.py  session.py  stealth.py
outputs/bsa/proposal-automation/src/collector/adapters/: base.py  coconala.py  crowdworks.py  lancers.py
outputs/bsa/proposal-automation/src/collector/tests/: test_adapters_base.py  test_coconala_detail.py  test_crowdworks_detail.py  test_db.py  test_lancers_detail.py  test_lancers_listings.py  test_scorer.py  test_session.py
outputs/bsa/proposal-automation/src/collector/tests/fixtures/: coconala_detail_open.html  coconala_list.html  crowdworks_detail_closed.html  crowdworks_detail_open.html  lancers_detail.html  lancers_listing_ad.html  lancers_listing_lp.html  lancers_listing_website.html
raw/: .manifest.json  INBOX.md
scripts/: install-git-hooks.sh  manifest-bootstrap.sh  monthly-audit.sh  morning-routine.sh  responsive-audit.sh  responsive-snap.sh  self-improve.sh  session-start-banner.sh  weekly-review.sh  wt-done-merged.sh  wt-done.sh  wt-new.sh
wiki/: SCHEMA.md  hot.md  index.md  log.md
x-buzz-radar/: .gitignore  (+7 more)
(+1918 files in other folders)
