[project]
name = "bsa-pa-collector"
version = "0.1.0"
description = "BSA Proposal Automation - Collector"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.45.0",
  "playwright-stealth>=2.0.0",
  "beautifulsoup4>=4.12.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# pythonpath = ["."] で src/collector/ 直下を import path に追加。
# adapters/ パッケージ（editable install 済）に加えて、top-level の
# scorer.py / session.py / stealth.py / db.py / main.py を後の Task で
# `from scorer import ...` 形式で import できるようにする。
